k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cas-client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: cas_client
  template:
    metadata:
      labels:
        component: cas_client
    spec:
      containers:
        - name: client
          image: eferhatg/cas-client
          ports:
            - name: client-metrics
              containerPort: 20001
---
apiVersion: v1
kind: Service
metadata:
  name: cas-client-service
  labels:
    app: cas-client
spec:
  type: ClusterIP
  selector:
    app: cas-client
  ports:
    - name: client-metrics
      port: 20001
      protocol: TCP
      targetPort: 20001
