k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /server/?(.*)
            backend:
              serviceName: cas-server-service
              servicePort: 5000
          - path: /cache/?(.*)
            backend:
              serviceName: cas-cache-service
              servicePort: 18001
